@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 1.0.1:
+  FIX: Display trackname in title column for wav files. (BR 83650)
   FIX: Don't show crash dialog when no engine plugins are found.
   FIX: Compile issue for KDE < 3.2.1 users. Sorry :(
 
